# kgpboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STUDY_GUIDE.md  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 343f7695b561_add_image_url_to_events_and_notices.py  645507e9d015_add_password_hash_to_users.py  914c4e12f0b3_categories_as_enums_event_registration_.py  c303ec548fcc_initial_schema_users_notices_events.py
app/: main.py
app/api/: deps.py  errors.py
app/api/routes/: auth.py  events.py  meta.py  notices.py  uploads.py  users.py
app/core/: config.py  exceptions.py  ratelimit.py  security.py  storage.py
app/db/: base.py  session.py
app/models/: __init__.py  event.py  mixins.py  notice.py  user.py
app/repositories/: __init__.py  event.py  notice.py  user.py
app/schemas/: __init__.py  auth.py  base.py  event.py  notice.py  pagination.py  user.py
app/services/: __init__.py  event.py  notice.py  user.py
docker/: entrypoint.sh
scripts/: create_admin.py  seed_demo.py
tests/: conftest.py  test_auth.py  test_events.py  test_notices.py  test_users.py
web/: .env.example  index.html  package-lock.json
web/src/: App.tsx  main.tsx  types.ts
web/src/api/: client.ts
web/src/auth/: AuthProvider.tsx
web/src/components/: FeedCard.tsx  FeedView.tsx  Feeds.tsx  Footer.tsx  Header.tsx  States.tsx
web/src/hooks/: categories.ts  details.ts  feeds.ts  meta.ts
web/src/lib/: format.ts
web/src/pages/: AdminUsers.tsx  CreatePage.tsx  Dashboard.tsx  EventDetail.tsx  Login.tsx  NoticeDetail.tsx  (+1 more)
(+2 files in other folders)
