[project]
name = "kgpboard"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
# `auto` = treat every async test as asyncio without decorating each one.
asyncio_mode = "auto"
# Each test gets its own event loop; fixtures share that per-test loop.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Put the project root on sys.path so `import app...` works under pytest.
pythonpath = ["."]
